--- a/V2RayX/ConfigWindow.xib
+++ b/V2RayX/ConfigWindow.xib
@@ -541,14 +541,17 @@ Gw
                         </connections>
                     </button>
                     <segmentedControl verticalHuggingPriority="750" fixedFrame="YES" allowsExpansionToolTips="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pgq-bB-pvc">
-                        <rect key="frame" x="20" y="97" width="140" height="23"/>
+                        <rect key="frame" x="20" y="98" width="140" height="23"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <segmentedCell key="cell" borderStyle="border" alignment="left" style="smallSquare" trackingMode="momentary" id="TAd-3w-qoq">
                             <font key="font" metaFont="system"/>
                             <segments>
                                 <segment image="NSAddTemplate"/>
                                 <segment image="NSRemoveTemplate" tag="1"/>
-                                <segment imageScaling="axesIndependently" width="82" enabled="NO" tag="2">
+                                <segment image="NSActionTemplate" imageScaling="proportionallyUpOrDown" tag="2">
+                                    <nil key="label"/>
+                                </segment>
+                                <segment width="51" enabled="NO">
                                     <nil key="label"/>
                                 </segment>
                             </segments>
@@ -567,7 +570,7 @@ Gw
         </menuItem>
         <menu id="R79-z8-mxK">
             <items>
-                <menuItem title="Import from config.json..." id="eze-Oh-vyD">
+                <menuItem title="Import from config.json..." hidden="YES" id="eze-Oh-vyD">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
                         <action selector="importFromConfigJson:" target="-2" id="i3S-fA-KNX"/>
@@ -584,6 +587,7 @@ Gw
         </menu>
     </objects>
     <resources>
+        <image name="NSActionTemplate" width="14" height="14"/>
         <image name="NSAddTemplate" width="11" height="11"/>
         <image name="NSRemoveTemplate" width="11" height="11"/>
     </resources>
